--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "l7.js",
   "scripts": {
     "start": "node index",
-    "dev": "nodemon index"
+    "dev": "nodemon index",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,12 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "sass": "^1.69.5",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
